Get the latest version of this file at http://episoder.sourceforge.net/
===============================================================================

v0.5.0 (xx xxx 2008)
====================
 * Completely rewrote the plugin API (see README.plugins)
 * Episoder now requires python to run
 * New tv.com plugin (see README.tvcom)
 * New output layer
 * Switched to YAML for intermediate data storage

v0.4.7 (24 Feb 2007)
====================
 * Fixed a parsing issue introduced with 0.4.6

v0.4.6 (24 Feb 2007)
====================
 * Discovered yet another formatting possibility on epguides.com (used for
   instance for the show "Midsomer Murders") and adapted the parser accordingly
 * Slightly updated the man page

v0.4.5 (23 Jan 2007)
====================
 * Fixed some epguides parser issues

v0.4.4 (19 Nov 2006)
====================
 * Fixed the -i option when building the database (did the exact opposite of
   what it was supposed to do)

v0.4.3 (24 Oct 2006)
====================
 * We now actually honor the -i option when building the database
 * Added the possibility to override a show's name in the config file. This was
   needed for the new webisoder, a web-based episoder. Find out more about it
   at http://www.webisoder.net/
 * Oops, forgot to update episoder's version number in the last release...
 * Fixed a bug in the new epguides.com parser which would not drop episodes
   without a date

v0.4.2 (21 Oct 2006)
====================
 * Don't ignore the config file passed with -c anymore when building the db
 * Added parser for epguides.com (closes #38)

v0.4.1 (20 Apr 2006)
====================
 * Did some minor internal changes to get episoder to work on non-linux systems
 * Removed long options
 * Hotfix for the tv.com website changes

v0.4.0 (3 Dec 2005)
===================
 * Re-organized options: -vv is now -w, -rc is now -c (or --rc), -nd is gone
   (use --nodate), -sa is gone (use -s and --nodate instead), -i is gone (see
   below)