@@ -6,6 +6,14 @@ PURPOSE
 episoder is a tool to tell you about new episodes of your favourite TV shows.
 
 
+DEPENDENCIES
+------------
+In order to use episoder, you will need python installed on your system. In addition
+to the default distribution, the 'beautifulsoup' and 'yaml' modules are required. On
+debian systems the corresponding packages are called python-beautifulsoup and
+python-yaml.
+
+
 CONFIGURATION
 -------------
 See "man episoder"
@@ -13,12 +21,12 @@ See "man episoder"
 
 INSTALLATION
 ------------
-    * Run ./install.sh install [base_dir] where base_dir is the directory you
-      want episoder to be installed under (e.g. /usr or /usr/local).
-    * Create a cron job to have your database rebuilt once a day
-    * Add "$base_dir/bin/episoder" (e.g. /usr/bin/episoder) to your
-      ~/.bashrc, ~/.bash_profile, /etc/bash.bashrc or /etc/profile.
-      Consult the bash docs to find out which file you want to use.
+	* Run ./install.sh install [base_dir] where base_dir is the directory you
+	  want episoder to be installed under (e.g. /usr or /usr/local).
+	* Create a cron job to have your database rebuilt once a day
+	* Add "$base_dir/bin/episoder" (e.g. /usr/bin/episoder) to your
+	  ~/.bashrc, ~/.bash_profile, /etc/bash.bashrc or /etc/profile.
+	  Consult the bash docs to find out which file you want to use.
 
 
 CONTACT
