@@ -4,10 +4,11 @@ Get the latest version of this file at http://episoder.sourceforge.net/
 v0.5.0 (xx xxx 2008)
 ====================
  * Completely rewrote the plugin API (see README.plugins)
- * Episoder now requires python to run
+ * Episoder now requires python to run (see README)
  * New tv.com plugin (see README.tvcom)
- * New output layer
+ * New output layer (see README.plugins)
  * Switched to YAML for intermediate data storage
+ * Updated docs
 
 v0.4.7 (24 Feb 2007)
 ====================
